--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -29,4 +29,4 @@ jobs:
       run: |
         cd src
         echo $pwd
-        python -m unittest discover -s ..\test
+        python -m unittest discover
