--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Test with pytest
       run: |
         python -m coverage run -m unittest discover -s test
-        coverage report
+        python -m coverage report
