--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -28,4 +28,5 @@ jobs:
     - name: Test with pytest
       run: |
         conda init bsh
+        conda activate base
         python -m coverage run -m unittest discover -s test
