--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -28,5 +28,7 @@ jobs:
     - name: Test with pytest
       run: |
         conda list
+        # Though conda is ready, below python is pointing to somewhere else. Strange.
         python -m unittest discover -s test
         # python -m coverage run -m unittest discover -s test
+        # python -m coverage
