--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -28,6 +28,8 @@ jobs:
     - name: Test with pytest
       run: |
         conda list
+        where conda
+        where python
         # Though conda is ready, below python is pointing to somewhere else. Strange.
         python -m unittest discover -s test
         # python -m coverage run -m unittest discover -s test
