--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -25,7 +25,7 @@ jobs:
         $CONDA/bin/flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Unit Tests
       run: |
         conda info
         which conda
@@ -34,3 +34,4 @@ jobs:
         python -m unittest discover -s test
         # python -m coverage run -m unittest discover -s test
         # python -m coverage
+        # coverage-badge -o coverage.svg
