--- a/environment.yaml
+++ b/environment.yaml
@@ -7,11 +7,12 @@ channels:
 dependencies:
     - python==3.8.5 # The first line should always be python version
     - pip # to ensure pip is up to date
-    - coverage==5.3
+    - coverage==5.3 # for test coverage
     - requests==2.24.0 # optional, needed for http_client
-    - pycryptodome=3.9.8 # optional, needed in encryption_utils
+    - pycryptodome==3.9.8 # optional, needed in encryption_utils
     - paramiko==2.7.2 # optional, needed for ftp_client and ssh_client
     - pysocks==1.7.1 # optional, needed for ftp_client
+    - pyyaml==5.3.1
     - pip:
           - pipdeptree # or conda install -c conda-forge pipdeptree
           - coverage-badge  # coverage-badge -o coverage.svg  run in here to generate coverage badge
