--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Unit Tests
       run: |
         conda info
+        conda list
         which conda
         which python
         # Though conda is ready, below python is pointing to somewhere else. Strange.
