--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -16,6 +16,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        conda update -n base -c defaults conda
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         $CONDA/bin/conda env update --file environment.yaml --name base
     - name: Lint with flake8
