--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -16,7 +16,9 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        echo "Update conda"
         conda update -n base -c defaults conda
+        echo "End update"
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         $CONDA/bin/conda env update --file environment.yaml --name base
     - name: Lint with flake8
