--- a/environment.yaml
+++ b/environment.yaml
@@ -4,6 +4,7 @@ channels:
     - defaults
 
 dependencies:
+    - python==3.6.9
     - coverage==5.3
     - requests==2.24.0
     - pycryptodome==3.9.8
