--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -35,7 +35,7 @@ jobs:
         which conda
         which python
         # Though conda is ready, below python is pointing to somewhere else. Strange.
-        python -m unittest discover -s test
+        python3 -m unittest discover -s test
         # python -m coverage run -m unittest discover -s test
         # python -m coverage
         # coverage-badge -o coverage.svg
