--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -35,7 +35,7 @@ jobs:
         which conda
         which python
         # Though conda is ready, below python is pointing to somewhere else. Strange.
-        python3 -m unittest discover test -t .
+        python3 -m unittest discover test -t src
         # python3 -m unittest discover -s test
         # python -m coverage run -m unittest discover -s test
         # python -m coverage
