--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -34,8 +34,10 @@ jobs:
         conda list
         which conda
         which python
+        ls
+        python -m unittest discover $(pwd)/test
         # Though conda is ready, below python is pointing to somewhere else. Strange.
-        python3 -m unittest discover test -t src/pypigeonhole_utils
+        # python3 -m unittest discover test -t src/pypigeonhole_utils
         # python3 -m unittest discover -s test
         # python -m coverage run -m unittest discover -s test
         # python -m coverage
