--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -35,7 +35,7 @@ jobs:
         which conda
         which python
         ls
-        python -m unittest discover $(pwd)/test
+        python -m unittest discover $(pwd)/test -t .
         # Though conda is ready, below python is pointing to somewhere else. Strange.
         # python3 -m unittest discover test -t src/pypigeonhole_utils
         # python3 -m unittest discover -s test
