--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -35,7 +35,7 @@ jobs:
         which conda
         which python
         ls
-        python3 -m unittest discover .
+        python3 -m unittest discover test
         #python3 -m unittest discover test -t $(pwd)
         # Though conda is ready, below python is pointing to somewhere else. Strange.
         # python3 -m unittest discover test -t src/pypigeonhole_utils
